--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ data/cifar-10-batches-py/data_batch_3
 data/cifar-10-batches-py/data_batch_4
 data/cifar-10-batches-py/data_batch_5
 data/cifar-10-batches-py/test_batch
+data/
