--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,9 @@ data/*
 distill_GPTlm_model
 distillLLAMA
 distillLLAMA2
+distillLLAMAtrain
+distillLLAMAtrain2
+results
 teacher
 nextTokenpre/teacher_llama
+distill
