--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ weatherTrain/weather_model3
 weatherTrain/weather_model4
 weatherTrain/data.xlsx
 
-TrainSum/model
+TrainSum/Distill/model
 
 TrainSum/SQuAD/model
 
